--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+.nav-item {
+  width: 230px;
+}
+
+.agenda-delete-button {
+  float: right;
+  width: 30%;
+}
+
+.nav-link {
+  position: relative;
+  float: left;
+  width: 70%;
+}
+
+.nav-link p {
+  width: 100%;
+}
+
+.agenda-title {
+  display: inline-block;
+}
