--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,7 @@
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                       <% if current_user == assign.team.owner %>
-                      <td><%= link_to I18n.t('views.button.change_leader'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-warning' %></td>
+                      <td><%= link_to I18n.t('views.button.change_leader'), change_leader_team_path(@team, owner_id: assign.user_id), method: :patch, class: 'btn btn-sm btn-warning' %></td>
                       <% end %>
                     </tr>
                   <% end %>
