--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -41,7 +41,9 @@
                     <tr>
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
+                      <% if current_user == assign.team.owner || current_user == assign.user %>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <% end %>
                       <% if current_user == assign.team.owner %>
                       <td><%= link_to I18n.t('views.button.change_leader'), change_leader_team_path(@team, owner_id: assign.user_id), method: :patch, class: 'btn btn-sm btn-warning' %></td>
                       <% end %>
